# autonomous_f1tenth

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Dockerfile.car  Dockerfile.sim  README.md  austin_1_save.pgm  build.sh  coords.txt  dockercommand.txt  lidar_ae_ftg_rand.pt  retrain.sh  run.sh  training.sh
helperScripts/: 0kill.sh  1manual.sh  2train.sh  3test.sh  4openGZ.sh  retrain.sh
overtaking_models/: 350000_actor.pht  350000_critic.pht  SAC_actor.pht  SAC_critic.pht  SAC_track_actor.pht  SAC_track_critic.pht  TD3_critic.pht  TD3_overtaking_actor.pht  TD3_track_actor.pht  TD3_track_critic.pht
overtaking_models/baseline_new/: algorithm_config.json  env_config.json  network_config.json
overtaking_models/f1twocar/: TD3_actor.pht  TD3_critic.pht  (+6 more)
src/: .gitignore  coords.txt
src/controllers/: package.xml  setup.py
src/controllers/config/: car.yaml  plan.yaml  rl.yaml  rl_policy.yaml  sim.yaml
src/controllers/controllers/: controller.py  ftg_controller.py  ftg_policy.py  load_path.py  mapping.py  mpc.py  planner.py  pure_pursuit.py  random.py  rl_controller.py  rl_policy.py  save_path.py  sim.launch.py  sim.py  state_machine.py  testPath.py  test_path.py  track.py  turn_and_drive.py  util.py
src/controllers/controllers/path_planners/: AStar.py  DStarLite.py  ImageGraph.py  PriorityQueue.py  util.py
src/controllers/controllers/path_trackers/: mpc.py  pure_pursuit.py  turn_and_drive.py
src/controllers/launch/: car.launch.py  ftg.launch.py  load_path.launch.py  plan.launch.py  rl.launch.py  save_path.launch.py  sim.launch.py  sim_localized.launch.py
(+405 files in other folders)
